overlay submitted msg added, menu tab images tweaked for IE 6 and FF3 wrapping issue fixed.

--- a/public/stylesheets/activity.css
+++ b/public/stylesheets/activity.css
@@ -26,7 +26,8 @@
   float: right;
   margin-top: 10px;
   height: 30px;
-  width: 201px; }
+  width: 240px;
+  text-align: right; }
 
 .name_update a {
   float: left;
