--- a/public/stylesheets/fixes_ie6.css
+++ b/public/stylesheets/fixes_ie6.css
@@ -47,7 +47,8 @@ h3 {
   padding-top: 20px; }
 
 #view_activities_by {
-  margin-top: 20px; }
+  margin-top: 20px;
+  width: 201px; }
 
 #questions.no_help .button input {
   margin-right: 290px; }
@@ -79,3 +80,6 @@ h3 {
   margin-top: 10px; }
 #questions .question .add_issue img {
   margin-right: 0px; }
+
+#disable {
+  height: 980px; }
